# src/main/java/com/konsol/core/web/rest/api/AccountUserResource.java
@@ -2,7 +2,11 @@ package com.konsol.core.web.rest.api;
 
 import com.konsol.core.repository.AccountUserRepository;
 import com.konsol.core.service.AccountUserService;
-import com.konsol.core.service.dto.AccountUserDTO;
+import com.konsol.core.service.api.dto.AccountUserContainer;
+import com.konsol.core.service.api.dto.AccountUserDTO;
+import com.konsol.core.service.api.dto.AccountUserSearchModel;
+import com.konsol.core.service.api.dto.CreateAccountUserDTO;
+import com.konsol.core.web.api.AccountUserApiDelegate;
 import com.konsol.core.web.rest.errors.BadRequestAlertException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -15,10 +19,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import tech.jhipster.web.util.HeaderUtil;
@@ -28,9 +34,8 @@ import tech.jhipster.web.util.ResponseUtil;
 /**
  * REST controller for managing {@link com.konsol.core.domain.AccountUser}.
  */
-@RestController
-@RequestMapping("/api")
-public class AccountUserResource {
+@Service
+public class AccountUserResource implements AccountUserApiDelegate {
 
     private final Logger log = LoggerFactory.getLogger(AccountUserResource.class);
 
@@ -51,55 +56,22 @@ public class AccountUserResource {
     /**
      * {@code POST  /account-users} : Create a new accountUser.
      *
-     * @param accountUserDTO the accountUserDTO to create.
+     * @param createAccountUserDTO the accountUserDTO to create.
      * @return the {@link ResponseEntity} with status {@code 201 (Created)} and with body the new accountUserDTO, or with status {@code 400 (Bad Request)} if the accountUser has already an ID.
-     * @throws URISyntaxException if the Location URI syntax is incorrect.
      */
-    @PostMapping("/account-users")
-    public ResponseEntity<AccountUserDTO> createAccountUser(@Valid @RequestBody AccountUserDTO accountUserDTO) throws URISyntaxException {
-        log.debug("REST request to save AccountUser : {}", accountUserDTO);
-        if (accountUserDTO.getId() != null) {
-            throw new BadRequestAlertException("A new accountUser cannot already have an ID", ENTITY_NAME, "idexists");
-        }
-        AccountUserDTO result = accountUserService.save(accountUserDTO);
-        return ResponseEntity
-            .created(new URI("/api/account-users/" + result.getId()))
-            .headers(HeaderUtil.createEntityCreationAlert(applicationName, true, ENTITY_NAME, result.getId()))
-            .body(result);
-    }
+    @Override
+    public ResponseEntity<AccountUserDTO> createAccountUser(@Valid @RequestBody CreateAccountUserDTO createAccountUserDTO) {
+        log.debug("REST request to save AccountUser : {}", createAccountUserDTO);
 
-    /**
-     * {@code PUT  /account-users/:id} : Updates an existing accountUser.
-     *
-     * @param id the id of the accountUserDTO to save.
-     * @param accountUserDTO the accountUserDTO to update.
-     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the updated accountUserDTO,
-     * or with status {@code 400 (Bad Request)} if the accountUserDTO is not valid,
-     * or with status {@code 500 (Internal Server Error)} if the accountUserDTO couldn't be updated.
-     * @throws URISyntaxException if the Location URI syntax is incorrect.
-     */
-    @PutMapping("/account-users/{id}")
-    public ResponseEntity<AccountUserDTO> updateAccountUser(
-        @PathVariable(value = "id", required = false) final String id,
-        @Valid @RequestBody AccountUserDTO accountUserDTO
-    ) throws URISyntaxException {
-        log.debug("REST request to update AccountUser : {}, {}", id, accountUserDTO);
-        if (accountUserDTO.getId() == null) {
-            throw new BadRequestAlertException("Invalid id", ENTITY_NAME, "idnull");
+        AccountUserDTO result = accountUserService.create(createAccountUserDTO);
+        try {
+            return ResponseEntity
+                .created(new URI("/api/account-users/" + result.getId()))
+                .headers(HeaderUtil.createEntityCreationAlert(applicationName, true, ENTITY_NAME, result.getId()))
+                .body(result);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
-        if (!Objects.equals(id, accountUserDTO.getId())) {
-            throw new BadRequestAlertException("Invalid ID", ENTITY_NAME, "idinvalid");
-        }
-
-        if (!accountUserRepository.existsById(id)) {
-            throw new BadRequestAlertException("Entity not found", ENTITY_NAME, "idnotfound");
-        }
-
-        AccountUserDTO result = accountUserService.update(accountUserDTO);
-        return ResponseEntity
-            .ok()
-            .headers(HeaderUtil.createEntityUpdateAlert(applicationName, true, ENTITY_NAME, accountUserDTO.getId()))
-            .body(result);
     }
 
     /**
@@ -111,13 +83,12 @@ public class AccountUserResource {
      * or with status {@code 400 (Bad Request)} if the accountUserDTO is not valid,
      * or with status {@code 404 (Not Found)} if the accountUserDTO is not found,
      * or with status {@code 500 (Internal Server Error)} if the accountUserDTO couldn't be updated.
-     * @throws URISyntaxException if the Location URI syntax is incorrect.
      */
-    @PatchMapping(value = "/account-users/{id}", consumes = { "application/json", "application/merge-patch+json" })
-    public ResponseEntity<AccountUserDTO> partialUpdateAccountUser(
+    @Override
+    public ResponseEntity<AccountUserDTO> updateAccountUser(
         @PathVariable(value = "id", required = false) final String id,
         @NotNull @RequestBody AccountUserDTO accountUserDTO
-    ) throws URISyntaxException {
+    ) {
         log.debug("REST request to partial update AccountUser partially : {}, {}", id, accountUserDTO);
         if (accountUserDTO.getId() == null) {
             throw new BadRequestAlertException("Invalid id", ENTITY_NAME, "idnull");
@@ -130,7 +101,7 @@ public class AccountUserResource {
             throw new BadRequestAlertException("Entity not found", ENTITY_NAME, "idnotfound");
         }
 
-        Optional<AccountUserDTO> result = accountUserService.partialUpdate(accountUserDTO);
+        Optional<AccountUserDTO> result = accountUserService.update(accountUserDTO);
 
         return ResponseUtil.wrapOrNotFound(
             result,
@@ -141,15 +112,16 @@ public class AccountUserResource {
     /**
      * {@code GET  /account-users} : get all the accountUsers.
      *
-     * @param pageable the pagination information.
      * @return the {@link ResponseEntity} with status {@code 200 (OK)} and the list of accountUsers in body.
      */
-    @GetMapping("/account-users")
-    public ResponseEntity<List<AccountUserDTO>> getAllAccountUsers(@org.springdoc.api.annotations.ParameterObject Pageable pageable) {
+    @Override
+    public ResponseEntity<List<AccountUserDTO>> getAllAccountUsers(Integer page, Integer size, List<String> sort) {
+        Pageable pageable = PageRequest.of(page, size);
+
         log.debug("REST request to get a page of AccountUsers");
-        Page<AccountUserDTO> page = accountUserService.findAll(pageable);
-        HttpHeaders headers = PaginationUtil.generatePaginationHttpHeaders(ServletUriComponentsBuilder.fromCurrentRequest(), page);
-        return ResponseEntity.ok().headers(headers).body(page.getContent());
+        Page<AccountUserDTO> pages = accountUserService.findAll(pageable);
+        HttpHeaders headers = PaginationUtil.generatePaginationHttpHeaders(ServletUriComponentsBuilder.fromCurrentRequest(), pages);
+        return ResponseEntity.ok().headers(headers).body(pages.getContent());
     }
 
     /**
@@ -158,7 +130,8 @@ public class AccountUserResource {
      * @param id the id of the accountUserDTO to retrieve.
      * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the accountUserDTO, or with status {@code 404 (Not Found)}.
      */
-    @GetMapping("/account-users/{id}")
+
+    @Override
     public ResponseEntity<AccountUserDTO> getAccountUser(@PathVariable String id) {
         log.debug("REST request to get AccountUser : {}", id);
         Optional<AccountUserDTO> accountUserDTO = accountUserService.findOne(id);
@@ -171,10 +144,15 @@ public class AccountUserResource {
      * @param id the id of the accountUserDTO to delete.
      * @return the {@link ResponseEntity} with status {@code 204 (NO_CONTENT)}.
      */
-    @DeleteMapping("/account-users/{id}")
+    @Override
     public ResponseEntity<Void> deleteAccountUser(@PathVariable String id) {
         log.debug("REST request to delete AccountUser : {}", id);
         accountUserService.delete(id);
         return ResponseEntity.noContent().headers(HeaderUtil.createEntityDeletionAlert(applicationName, true, ENTITY_NAME, id)).build();
+    }
+
+    @Override
+    public ResponseEntity<AccountUserContainer> searchAccountUsers(AccountUserSearchModel accountUserSearchModel) {
+        return ResponseEntity.ok().body(accountUserService.accountUserSearchPaginate(accountUserSearchModel));
     }
 }
