# src/main/resources/swagger/api.yml
@@ -33,29 +33,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StoreDTO'
-    put:
-      tags:
-        - store-resource
-      operationId: updateStore
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StoreDTO'
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StoreDTO'
     delete:
       tags:
         - store-resource
@@ -72,7 +49,7 @@ paths:
     patch:
       tags:
         - store-resource
-      operationId: partialUpdateStore
+      operationId: updateStore
       parameters:
         - name: id
           in: path
@@ -119,29 +96,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MoneyDTO'
-    put:
-      tags:
-        - money-resource
-      operationId: updateMoney
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MoneyDTO'
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MoneyDTO'
     delete:
       tags:
         - money-resource
@@ -158,7 +112,7 @@ paths:
     patch:
       tags:
         - money-resource
-      operationId: partialUpdateMoney
+      operationId: updateMoney
       parameters:
         - name: id
           in: path
@@ -399,29 +353,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BankDTO'
-    put:
-      tags:
-        - bank-resource
-      operationId: updateBank
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BankDTO'
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BankDTO'
     delete:
       tags:
         - bank-resource
@@ -438,7 +369,7 @@ paths:
     patch:
       tags:
         - bank-resource
-      operationId: partialUpdateBank
+      operationId: updateBank
       parameters:
         - name: id
           in: path
@@ -467,7 +398,7 @@ paths:
         name: id
         in: path
         required: true
-  '/api/account-users/{id}':
+  '/account-user/{id}':
     get:
       tags:
         - account-user-resource
@@ -478,29 +409,6 @@ paths:
           required: true
           schema:
             type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AccountUserDTO'
-    put:
-      tags:
-        - account-user-resource
-      operationId: updateAccountUser
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AccountUserDTO'
-        required: true
       responses:
         '200':
           description: OK
@@ -524,7 +432,7 @@ paths:
     patch:
       tags:
         - account-user-resource
-      operationId: partialUpdateAccountUser
+      operationId: updateAccountUser
       parameters:
         - name: id
           in: path
@@ -547,6 +455,90 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountUserDTO'
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+  /account-user:
+    get:
+      tags:
+        - account-user-resource
+      operationId: getAllAccountUsers
+      parameters:
+        - name: page
+          in: query
+          description: Zero-based page index (0..N)
+          required: false
+          schema:
+            minimum: 0
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          description: The size of the page to be returned
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            default: 20
+        - name: sort
+          in: query
+          description: 'Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.'
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AccountUserDTO'
+    post:
+      tags:
+        - account-user-resource
+      operationId: createAccountUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAccountUserDTO'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountUserDTO'
+    parameters: []
+  /account-user/view:
+    post:
+      tags:
+        - account-user-resource
+      operationId: searchAccountUsers
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountUserSearchModel'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountUserContainer'
+      summary: SearchAccountUsers
+      description: 'search in all account users using all fields available '
+    parameters: []
   /stores:
     get:
       tags:
@@ -741,7 +733,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MoneyDTO'
+              $ref: '#/components/schemas/CreateMoneyDTO'
         required: true
       responses:
         '200':
@@ -1262,63 +1254,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BankDTO'
-    parameters: []
-  /account-user/account-users:
-    get:
-      tags:
-        - account-user-resource
-      operationId: getAllAccountUsers
-      parameters:
-        - name: page
-          in: query
-          description: Zero-based page index (0..N)
-          required: false
-          schema:
-            minimum: 0
-            type: integer
-            default: 0
-        - name: size
-          in: query
-          description: The size of the page to be returned
-          required: false
-          schema:
-            minimum: 1
-            type: integer
-            default: 20
-        - name: sort
-          in: query
-          description: 'Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.'
-          required: false
-          schema:
-            type: array
-            items:
-              type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AccountUserDTO'
-    post:
-      tags:
-        - account-user-resource
-      operationId: createAccountUser
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AccountUserDTO'
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AccountUserDTO'
     parameters: []
   /register:
     post:
@@ -1849,8 +1784,6 @@ components:
           exclusiveMinimum: false
           type: number
     AccountUserDTO:
-      required:
-        - name
       type: object
       properties:
         id:
@@ -1867,16 +1800,109 @@ components:
           minimum: 0
           exclusiveMinimum: false
           type: number
+          default: 0
         balanceOut:
           minimum: 0
           exclusiveMinimum: false
           type: number
+          default: 0
         phone:
           type: string
         address:
           type: string
         address2:
           type: string
+        created_date:
+          type: string
+          x-stoplight:
+            id: fkvjy0iy6toz5
+          format: date-time
+        lastModifiedDate:
+          type: string
+          x-stoplight:
+            id: 47mf7wx6v5ykd
+          format: date-time
+      required:
+        - name
+    AccountUserContainer:
+      type: object
+      properties:
+        result:
+          type: array
+          items:
+            $ref: '#/components/schemas/AccountUserDTO'
+        total:
+          type: integer
+          x-stoplight:
+            id: 6ahyus6b0314d
+    AccountUserSearchModel:
+      type: object
+      properties:
+        kind:
+          type: string
+          enum:
+            - CUSTOMER
+            - SUPPLIER
+            - SALEMAN
+          description: Kind of user searching for
+        name:
+          type: string
+          x-stoplight:
+            id: zcl7tzpt3hpb8
+          description: name of user searching for
+        phone:
+          type: string
+          x-stoplight:
+            id: bmralpe6k2y2t
+          description: phone of user searching for
+        address:
+          type: string
+          x-stoplight:
+            id: sga598k0q52ps
+          description: adress of user searching for
+        address_2:
+          type: string
+          x-stoplight:
+            id: odvrflzt79ylv
+          description: adress of user searching for
+        page:
+          type: integer
+          x-stoplight:
+            id: n0at7ilfmdf65
+        size:
+          type: integer
+          x-stoplight:
+            id: i1yxmpssqaim9
+    CreateAccountUserDTO:
+      type: object
+      properties:
+        name:
+          type: string
+        kind:
+          type: string
+          enum:
+            - CUSTOMER
+            - SUPPLIER
+            - SALEMAN
+          default: CUSTOMER
+        balanceIn:
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+          default: 0
+        balanceOut:
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+          default: 0
+        phone:
+          type: string
+        address:
+          type: string
+        address2:
+          type: string
+      required:
+        - name
     BankDTO:
       required:
         - name
@@ -1898,6 +1924,10 @@ components:
           enum:
             - PAYMENT
             - RECEIPT
+        details:
+          type: string
+          x-stoplight:
+            id: q36ihy0c6t89v
         moneyIn:
           minimum: 0
           exclusiveMinimum: false
@@ -1915,6 +1945,41 @@ components:
         created_date:
           type: string
           format: date-time
+    CreateMoneyDTO:
+      type: object
+      x-stoplight:
+        id: 2ekbdrjsummeb
+      description: dto to create new money
+      properties:
+        kind:
+          type: string
+          enum:
+            - PAYMENT
+            - RECEIPT
+        details:
+          type: string
+          x-stoplight:
+            id: 1arzmtuhggam3
+        moneyIn:
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+          default: 0
+        moneyOut:
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+          default: 0
+        bankId:
+          type: string
+          x-stoplight:
+            id: mwz9r5h5p8nlx
+        accountId:
+          type: string
+          x-stoplight:
+            id: 6ub77pfec1wj6
+      required:
+        - kind
     InvoiceDTO:
       type: object
       properties:
@@ -2714,6 +2779,10 @@ components:
         bankId:
           type: string
           default: null
+        details:
+          type: string
+          x-stoplight:
+            id: 7v24ok939m287
     ItemViewDTOContainer:
       title: ItemViewDTOContainer
       x-stoplight:
@@ -2756,7 +2825,6 @@ components:
       x-stoplight:
         id: dpnzre10uswhm
       type: object
-      description: ''
       properties:
         result:
           type: array
